# HRFunc

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  ETHICS.md  MANIFEST.in  README.md  pyproject.toml
docs/internal/: architecture.md  known_issues.md  v1_2_0_changelog_summary.md
docs/plans/: phase_breakdown.md  plan_v1_2_0.md  plan_v2_0_0.md  refactoring_plan.md
src/hrfunc/: _utils.py  hrfunc.py  hrhash.py  hrtree.py  observer.py
src/hrfunc/assets/: executable_icon.icns  fsaverage_pial_lowpoly.npz  fsaverage_scalp_lowpoly.npz
src/hrfunc/assets/atlases/: HarvardOxford-cort-maxprob-thr25-2mm.labels.json
src/hrfunc/cli/: __init__.py  install_shortcut.py
src/hrfunc/gui/: __init__.py  _webview_compat.py  app.py  state.py  submission.py  theme.py  workers.py  workspace_io.py
src/hrfunc/gui/components/: __init__.py  activity_panel.py  brand.py  dataset_picker.py  dataset_tree.py  export_panel.py  hrf_panel.py  hrtree_panel.py  inspect_panel.py  preprocess_panel.py  quality_panel.py
src/hrfunc/gui/pages/: __init__.py  library.py  shell.py  welcome.py  workspace.py
src/hrfunc/hrfs/: hbo_hrfs.json  hbr_hrfs.json
src/hrfunc/io/: __init__.py  detect.py  manifest.py  raw_cache.py  scan.py
src/hrfunc/spatial/: __init__.py  affine.py  atlas.py  coords.py  point.py  shapes.py
src/hrfunc/viz/: __init__.py  brain_scene.py  meshes.py
tests/: gui_main.py  hrfs.json  test_canonical_hrf.py  test_cli_install_shortcut.py  test_generate_distribution_plotting.py  test_gui_activity_panel.py  test_gui_brand.py  test_gui_dataset_picker.py  test_gui_dataset_tree.py  test_gui_estimate_panel.py  test_gui_export.py  test_gui_foundation.py  test_gui_inspect_panel.py  test_gui_library.py  test_gui_preprocess.py  test_gui_quality_panel.py  test_gui_scan_inspector.py  test_gui_shell.py  test_gui_submission.py  test_gui_welcome.py  test_gui_welcome_shortcut_prompt.py  test_gui_workspace.py  test_gui_workspace_io.py  test_hasher_branch.py  test_hrtree_to_hrf_points.py  test_input_validation.py  test_io_detect.py  test_io_raw_cache.py  test_io_scan.py  test_localization.py  test_observer_and_typos.py  test_oxygenation_guard.py  test_phase1a.py  test_phase1bc.py  test_phase2.py  test_progress_callbacks.py  test_spatial_affine.py  test_spatial_atlas.py  test_spatial_atlas_region.py  test_spatial_coords.py  (+9 more)
tests/data/: rps_results.csv  sham_hbr_hrfs.json
tests/data/FIF_formatted/: subject_1.fif  subject_2.fif
tests/data/NIRX_formatted/subject_1/: NIRS-2025-05-27_002.avg  NIRS-2025-05-27_002.hdr  NIRS-2025-05-27_002.inf  NIRS-2025-05-27_002.set  NIRS-2025-05-27_002.tpl  NIRS-2025-05-27_002.wl1  NIRS-2025-05-27_002.wl2  NIRS-2025-05-27_002_config.txt
tests/data/NIRX_formatted/subject_2/: NIRS-2025-05-27_002.evt  NIRS-2025-05-27_002.hdr  NIRS-2025-05-27_002.inf  NIRS-2025-05-27_002.set  NIRS-2025-05-27_002.tpl  NIRS-2025-05-27_002.wl1  NIRS-2025-05-27_002.wl2  NIRS-2025-05-27_002_config.txt  NIRS-2025-05-27_002_probeInfo.mat
tests/data/hrfs/: hbo_hrtree.json  hbr_hrtree.json  hrfs.json  sham_hbo_hrtree.json
tests/data/sNIRF_formatted/: events.txt  fnirs_preprocessing.py  subject_1.snirf  subject_2.snirf
