[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hrfunc"
version = "1.1.2"
description = "Tools for modeling HRFs and estimating neural activity from fNIRS brain signals"
readme = "README.md"
requires-python = ">=3.8"
license = "BSD-3-Clause"
authors = [
    { name="Denny Schaedig", email="dennys@wustl.edu" }
    ]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    ]

dependencies = [
    "numpy",
    "mne",
    "mne_nirs",
    "scipy",
    "nilearn",
    "matplotlib",
    "platformdirs>=3.0",
    ]

[project.optional-dependencies]
gui = [
    "nicegui>=2.0",
    "plotly>=5.18",
    "pywebview>=5.0",
    ]

[project.scripts]
hrfunc = "hrfunc.gui.app:main"

[project.urls]
Homepage = "https://github.com/dennys246/hrfunc"
Documentation = "https://www.hrfunc.org"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["hrfunc", "hrfunc.io", "hrfunc.gui"]
include-package-data = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring real fNIRS data files",
]
